# redesigned-broccoli

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  Task.md  Technical_Design_Document_Smart_Document_QA_System.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260407_0001_initial_schema.py
data/indexes/doc_2e424bad-ff1b-440f-a648-1c56386000e2/: index.faiss  metadata.json  vectors.npy
data/indexes/doc_d98d0240-5b34-4525-8a5b-1e9865d76e7c/: index.faiss  metadata.json  vectors.npy
data/uploads/: a64c900c-ce99-41b8-a60f-924af77f0673_vendor_assessment_template.docx
docs/: GITHUB_COMMIT_PLAN.md  TASK_COMPLIANCE_CHECKLIST.md  TEST_COVERAGE.md
postman/: Smart-Document-QA.local.postman_environment.json  Smart-Document-QA.postman_collection.json
sample_docs/: README.md  quarterly_report_q1_2026.docx
src/app/: config.py  dependencies.py  main.py
src/app/api/: error_handlers.py  middleware.py  router.py  ui_router.py
src/app/cache/: __init__.py  memory_cache.py
src/app/core/: exceptions.py  logging.py  security.py
src/app/db/: session.py
src/app/embeddings/: __init__.py  encoder.py
src/app/llm/: __init__.py  prompts.py  provider.py
src/app/processing/: __init__.py
src/app/queue/: __init__.py  celery_app.py  celery_tasks.py  (+3 more)
tests/: conftest.py
tests/integration/: test_conversation_endpoints.py  test_db_models.py  test_document_endpoints.py  test_health_endpoints.py  test_ui_endpoints.py  test_worker_pool.py
tests/unit/: test_config.py  test_db_enums.py  test_qa_service.py  test_task_queue.py
(+31 files in other folders)
