[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "smart-doc-qa"
version = "0.1.0"
description = "Smart Document Q&A System"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.122.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "python-multipart>=0.0.20",
    "celery[redis]>=5.4.0",
    "openai>=2.11.0",
    "sentence-transformers>=5.3.0",
    "faiss-cpu>=1.13.0",
    "rank-bm25>=0.2.2",
    "numpy>=2.1.0",
    "PyMuPDF>=1.25.0",
    "python-docx>=1.1.2",
    "tiktoken>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0"
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
